--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <footer>
     <p>Data provided by <a href="https://opentdb.com/" target="_blank">Open Trivia API</a></p>
   </footer>
-
+<script src=""></script>
 </body>
 
 </html>
