completed api call function

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <footer>
     <p>Data provided by <a href="https://opentdb.com/" target="_blank">Open Trivia API</a></p>
   </footer>
-<script src=""></script>
+<script src="./src/index.js"></script>
 </body>
 
 </html>
