--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
         </ul>
       </div>
       <div class="questionAnswers"></div>
+      <div class="endGameModal">
+        <div class="modalText hidden">
+          <a href="index.html">Play Again</a>
+        </div>
+      </div>
     </div>
   </main>
 
