styled landing page

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="welcome">
       <div class="headingContainer">
         <div class="imgContainer">
-          <img src="" alt="">
+          <img src="./assets/logopink.svg" alt="trivia blitz">
         </div>
         <div class="gameInfo">
-          <h2>Game Info</h2>
+          <h2>How to play:</h2>
           <ul>
             <li>You will have 30 seconds to answer each question</li>
             <li>You'll receive 100 points per correct answer plus bonus points for time remaining</li>
