added offset background to logo

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="imgContainer">
           <img src="./assets/logopink.svg" alt="trivia blitz">
         </div>
+        <div class="offsetBG"></div>
       </div>
       <!--headingContainer ends-->
 
