--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <h2>How to Play</h2>
           <ul>
             <li>You will have 30 seconds to answer each question</li>
-            <li>You'll receive 100 points per correct answer plus bonus points for time remaining</li>
+            <li>100 points are awarded per correct answer plus bonus points for time remaining</li>
           </ul>
         </section>
 
