Made end game screen be full screen overlay

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     </div>
     <div class="endGameModal hidden">
       <div class="modalText">
+        <p id ="finalScore"></p>
         <a href="index.html">Play Again</a>
       </div>
     </div>
