Fixed issue with timer on last question, added final score/question total

--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
               <option value="29">Entertainment: Comics</option>
               <option value="17">Science & Nature</option>
               <option value="18">Science: Computers</option>
-              <option value="19">Science: Mathematics</option>
               <option value="20">Mythology</option>
               <option value="22">Geography</option>
               <option value="23">History</option>
-              <option value="25">Art</option>
               <option value="26">Celebrities</option>
               <option value="27">Animals</option>
               <option value="28">Vehicles</option>
@@ -105,8 +103,7 @@
       <section class="questionAnswers">
     </div>
     <div class="endGameModal hidden">
-      <div class="modalText">
-        <p id ="finalScore"></p>
+      <div class="modalText" id="endScreenText">
         <a href="index.html">Play Again</a>
       </div>
     </div>
