created media query for landing page, changed style of logobox

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
           </ul>
         </section>
 
-        <form action="">
+        <form class="gameForm" action="">
 
           <h2>Select your game options and press GO to begin!</h2>
           
-          <div class="form-container">
+          <div class="formContainer">
             <label class="sr-only" for="category">Category of questions</label>
             <select name="category" id="category" required>
               <option value= "" selected disabled>Choose a Category</option>
