added sound toggle to game screen

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trivia Blitz</title>
   <link rel="stylesheet" href="styles/styles.css">
+  <script src="https://kit.fontawesome.com/855d511330.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -98,6 +99,10 @@
           <li id="timer">Time Left:</li>
           <li id="score">Score: 0</li>
           <li id="questionsCounter">Question number:</li>
+          <li>
+            <label class="soundLabel" for="soundCheck" name="soundCheck"><p class="soundLabelText">Sound On</p><i id="soundIcon" class="fa fa-toggle-on"></i> </label>
+            <input class="sr-only" id="soundCheck" name="soundCheck" type="checkbox">
+          </li>
         </ul>
       </div>
       <section class="questionAnswers">
