cleaned up two unused files, evened out whitespace in html

--- a/index.html
+++ b/index.html
@@ -88,13 +88,11 @@
 
 
 
-
-
-
-
     <div class="game hidden">
       <div class="stats">
-        <div class="topLeftLogo"> <img src="./assets/logopink.svg" alt="trivia blitz"></div>
+        <div class="topLeftLogo">
+          <img src="./assets/logopink.svg" alt="trivia blitz">
+        </div>
         <ul class="gameStats">
           <li id="timer">Time Left:</li>
           <li id="score">Score: 0</li>
